# imrantweetbot

./: .env.example  Dockerfile  README.md  bot_audit.db  bot_audit.db.backup  docker-compose.yml  oauth_tokens.env  pyproject.toml  requirements.txt  setup.py  start.sh  test_runner.py
.github/: copilot-instructions.md
.github/workflows/: python-package.yml
app/: __init__.py  audit_db.py  config.py  llm_provider.py  logger.py  main.py  main_oauth.py  oauth2_adapter.py  oauth2_client.py  poster.py  poster_safe.py  quota.py  rag.py  rate_limit.py  review_cli.py  safety.py  safety_enhanced.py  scheduler.py
app/src/: __init__.py  db.py  llm_provider.py  posting.py  rag_store.py  safety.py
data/: augmented.jsonl  gold.jsonl  local_gen.json  tfidf_index.joblib
docs/: pip install scikit-learn scipy numpy job  project_notes.txt
src/: __init__.py  auth.py  client.py  config.py  logger.py  utils.py
systemd/: crypto-ai-bot.service
tests/: __init__.py  test_client.py
tools/: build_rag_index.py  build_tfidf_index.py  evaluate_generations.py  export_tweets_to_jsonl.py  generate_locally.py  paraphrase_augment.py  prepare_finetune_dataset.py  pull_tweet_metrics.py  report_engagement.py  run_openai_finetune.py
